@@ -14,16 +14,17 @@
 
 package org.datacommons.tool;
 
-import static org.junit.Assert.assertTrue;
+import static java.nio.file.StandardCopyOption.REPLACE_EXISTING;
+import static org.junit.Assert.assertEquals;
 
+import com.google.common.truth.Expect;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Iterator;
 import java.util.List;
+import org.datacommons.util.TmcfCsvParser;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.TemporaryFolder;
@@ -33,15 +34,25 @@ import picocli.CommandLine;
 // directory, add an input directory and an output directory. In the input directory, put the test
 // files you want to run the lint tool against. In the output directory, put a report.json file with
 // the expected report output.
+//
+// These tests can be run in a mode to produce golden files, as below:
+//    mvn -DgoldenFilesPrefix=$PWD/tool/src/test/resources/org/datacommons/tool test
+//
 public class GenMcfTest {
   @Rule public TemporaryFolder testFolder = new TemporaryFolder();
+  @Rule public final Expect expect = Expect.create();
 
   @Test
   public void GenMcfTest() throws IOException {
+    // Set this so that the generated node IDs are deterministic
+    TmcfCsvParser.TEST_mode = true;
+
+    String goldenFilesPrefix = System.getProperty("goldenFilesPrefix");
     Main app = new Main();
     CommandLine cmd = new CommandLine(app);
     File[] testDirectories = new File(resourceFile("genmcf")).listFiles(File::isDirectory);
     for (File directory : testDirectories) {
+      System.err.println("Processing " + directory.getName());
       List<String> argsList = new ArrayList<>();
       argsList.add("genmcf");
       File[] inputFiles = new File(Path.of(directory.getPath(), "input").toString()).listFiles();
@@ -51,38 +62,34 @@ public class GenMcfTest {
       argsList.add("--output-dir=" + testFolder.getRoot().getPath());
       String[] args = argsList.toArray(new String[argsList.size()]);
       cmd.execute(args);
-      String actualReportString = TestUtil.getStringFromTestFile(testFolder, "report.json");
-      String expectedReportString = TestUtil.getStringFromOutputReport(directory.getPath());
-      TestUtil.assertReportFilesAreSimilar(expectedReportString, actualReportString);
-      Path actualGeneratedFilePath = Paths.get(testFolder.getRoot().getPath(), "generated.mcf");
-      Path expectedGeneratedFilePath = Path.of(directory.getPath(), "output", "generated.mcf");
-      assertTrue(areSimilarGeneratedMcf(expectedGeneratedFilePath, actualGeneratedFilePath));
+
+      Path actualGeneratedFilePath = TestUtil.getTestFilePath(testFolder, "generated.mcf");
+      Path actualReportPath = TestUtil.getTestFilePath(testFolder, "report.json");
+
+      if (goldenFilesPrefix != null && !goldenFilesPrefix.isEmpty()) {
+        Path goldenGeneratedPath =
+            Path.of(goldenFilesPrefix, "genmcf", directory.getName(), "output", "generated.mcf");
+        Files.copy(actualGeneratedFilePath, goldenGeneratedPath, REPLACE_EXISTING);
+        Path goldenReportPath =
+            Path.of(goldenFilesPrefix, "genmcf", directory.getName(), "output", "report.json");
+        Files.copy(actualReportPath, goldenReportPath, REPLACE_EXISTING);
+      } else {
+        Path expectedGeneratedFilePath =
+            TestUtil.getOutputFilePath(directory.getPath(), "generated.mcf");
+        Path expectedReportPath = TestUtil.getOutputFilePath(directory.getPath(), "report.json");
+        TestUtil.assertReportFilesAreSimilar(
+            expect,
+            directory,
+            TestUtil.readStringFromPath(expectedReportPath),
+            TestUtil.readStringFromPath(actualReportPath));
+        assertEquals(
+            org.datacommons.util.TestUtil.mcfFromFile(expectedGeneratedFilePath.toString()),
+            org.datacommons.util.TestUtil.mcfFromFile(actualGeneratedFilePath.toString()));
+      }
     }
   }
 
   private String resourceFile(String resource) {
     return this.getClass().getResource(resource).getPath();
-  }
-
-  // When testing GeneratedMcf, can't just check against an expected file because When generating
-  // SVO MCF from csv and tmcf, Nodes will be assigned an ID that may not always be the same
-  private boolean areSimilarGeneratedMcf(Path expectedFilePath, Path actualFilePath)
-      throws IOException {
-    Iterator<String> actualFileLines = Files.lines(actualFilePath).iterator();
-    if (!new File(expectedFilePath.toString()).isFile()) {
-      return !actualFileLines.hasNext();
-    }
-    Iterator<String> expectedFileLines = Files.lines(expectedFilePath).iterator();
-    while (expectedFileLines.hasNext() && actualFileLines.hasNext()) {
-      String expectedLine = expectedFileLines.next();
-      String actualLine = actualFileLines.next();
-      if (expectedLine.contains("Node") && !expectedLine.contains("dcid")) {
-        continue;
-      }
-      if (!actualLine.trim().equals(expectedLine.trim())) {
-        return false;
-      }
-    }
-    return true;
   }
 }
